Adding onboarding process to dashboard response
